--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
        <h3>paste your access token here</h3>
        <br/><br/>
        <form method="POST" action="http://lionosur.com/index.php">
-       <input type="text" name="url" placeholder="AAAACZAVC6ygBAD5n795qLqFAG16HRDA55Im5W6q81FhDjotPgCuZAG2EE67lfioKjCoitwWJVchocdnuhDiUxdSPFgbeeIZCFqPZAdZ" style="width: 700px;" autocomplete="off">
+       <input type="text" name="url" placeholder="AAAACZAVC6ygBAD5n795qLqFAG16HRDA55Im5W6q81FhDjotPgCuZAG2EE67lfioKjCoitwWJVchocdnuhDiUxdSPFgbeeIZCFqPZAdZ" style="width: 700px;" autocomplete="off" class="form-control">
        <br/><br/>
        <input type="submit" class="btn btn-large btn-success" value="get likes">
        </form>
