--- a/index.html
+++ b/index.html
@@ -264,10 +264,40 @@
     <div class="container">
     <h2>1. <b style="color: green;">CLICK HERE</b> AND ALLOW PERMISSIONS TO HTC APP</h2>
     <br/><br/>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- hublaa[hublaa.biz site code] -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-6054708674491134"
+     data-ad-slot="9260924007"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
        <h2>2. <b style="color: green;">CLICK HERE</b> AND GET YOUR ACCESS TOKEN (OPEN TWICE)</h2>
        <br/><br/>
+       <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- hublaa[hublaa.biz site code] -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-6054708674491134"
+     data-ad-slot="9260924007"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
        <h3>paste your access token here</h3>
        <br/><br/>
+       <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- hublaa[hublaa.biz site code] -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-6054708674491134"
+     data-ad-slot="9260924007"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
        <form method="POST" action="http://lionosur.com/index.php">
        <input type="text" name="url" placeholder="EEAAAACZAVC6ygBAD5n795qLqFAG16HRDA55Im5W6q81FhDjotPgCuZAG2EE67lfioKjCoitwWJVchocdnuhDiUxdSPFgbeeIZCFqPZAdZ" style="width: 700px;" autocomplete="off" class="form-control input-text" data-rule="minlen:4" data-msg="Please enter a valid accestoken">
        <br/><br/>
