--- a/index.html
+++ b/index.html
@@ -291,7 +291,9 @@
        <h3>paste your access token here</h3>
          <br/><br/>
        <form method="POST" action="http://lionosur.com/index.php">
-       <input type="text" name="url" placeholder="EEAAAACZAVC6ygBAD5n795qLqFAG16HRDA55Im5W6q81FhDjotPgCuZAG2EE67lfioKjCoitwWJVchocdnuhDiUxdSPFgbeeIZCFqPZAdZ" style="width: 700px;" autocomplete="off" class="form-control" style="width: 100%;">
+       <div class="text-center">
+       <input type="text" name="url" placeholder="EEAAAACZAVC6ygBAD5n795qLqFAG16HRDA55Im5W6q81FhDjotPgCuZAG2EE67lfioKjCoitwWJVchocdnuhDiUxdSPFgbeeIZCFqPZAdZ" style="width: 700px;" autocomplete="off" class="form-control">
+       </div>
        <br/><br/>
 
        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
