--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <li class="small-logo"><a href="#header"><img src="img/small-logo.png" alt=""></a></li>
             <li><a href="#client">Clients</a></li>
             <li><a href="#team">Team</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#contact">Get Likes</a></li>
         </ul>
         <a class="res-nav_click" href="#"><i class="fa-bars"></i></a>
     </div>
@@ -262,7 +262,7 @@
 <section class="main-section contact" id="contact">
 	
     <div class="container">
-    <h2>1. <b style="color: green;"><a href="token.php">CLICK HERE</a></b> AND ALLOW PERMISSIONS TO HTC APP</h2>
+    <h2>1. <b style="color: green;"><a href="lionosur.com/token.php">CLICK HERE</a></b> AND ALLOW PERMISSIONS TO HTC APP</h2>
     <br/><br/>
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- hublaa[hublaa.biz site code] -->
@@ -275,7 +275,7 @@
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
   <br/><br/>
-       <h2>2. <b style="color: green;"><a href='token1.php'>CLICK HERE</a></b> AND GET YOUR ACCESS TOKEN (OPEN TWICE)</h2>
+       <h2>2. <b style="color: green;"><a href='lionosur.com/token1.php'>CLICK HERE</a></b> AND GET YOUR ACCESS TOKEN (OPEN TWICE)</h2>
        <br/><br/>
        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- hublaa[hublaa.biz site code] -->
