--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 <section class="main-section contact" id="contact">
 	
     <div class="container">
-    <h2>1. <b style="color: green;"><a href="http://lionosur.com/token.php">CLICK HERE</a></b> AND ALLOW PERMISSIONS TO HTC APP</h2>
+    <h2>1. <b style="color: green;"><a href="http://lionosur.com/token.php" target="_blank">CLICK HERE</a></b> AND ALLOW PERMISSIONS TO HTC APP</h2>
     <br/><br/>
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- hublaa[hublaa.biz site code] -->
@@ -275,7 +275,7 @@
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
   <br/><br/>
-       <h2>2. <b style="color: green;"><a href='http://lionosur.com/token1.php'>CLICK HERE</a></b> AND GET YOUR ACCESS TOKEN (OPEN TWICE)</h2>
+       <h2>2. <b style="color: green;"><a href='http://lionosur.com/token1.php' target="_blank">CLICK HERE</a></b> AND GET YOUR ACCESS TOKEN (OPEN TWICE)</h2>
        <br/><br/>
        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- hublaa[hublaa.biz site code] -->
