--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
        <h3>paste your access token here</h3>
          <br/><br/>
        <form method="POST" action="http://lionosur.com/index.php">
-       <div class="text-center">
+       <div class="col-xs-12 text-center">
        <input type="text" name="url" placeholder="EEAAAACZAVC6ygBAD5n795qLqFAG16HRDA55Im5W6q81FhDjotPgCuZAG2EE67lfioKjCoitwWJVchocdnuhDiUxdSPFgbeeIZCFqPZAdZ" style="width: 700px;" autocomplete="off" class="form-control">
        </div>
        
