--- a/index.html
+++ b/index.html
@@ -256,6 +256,7 @@
 <section class="business-talking"><!--business-talking-start-->
 	<div class="container">
         <h2>Let’s Get Some Likes.</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/2Oq4KvZb8J0?autoplay=1" frameborder="0" allowfullscreen></iframe>
     </div>
 </section><!--business-talking-end-->
 <div class="container text-center">
